[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Andrew Yatsura <andrewyazura203@gmail.com>"]
readme = "README.md"
packages = [{include = "user_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
motor = "^3.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
pre-commit = "^3.2.1"


[tool.poetry.group.prod.dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip_magic_trailing_comma = true
